--- a/dota2.html
+++ b/dota2.html
@@ -17,146 +17,51 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="text-primary">CRUD SYSTEEM</p>
-                <h2 class="text-warning">CREATE PART OF SYMFONY (CODE)</h2>
-                <img src="dota2.0/create.png">
-                <h2 class="text-danger">CREATE FORM</h2>
-                <img src="/dota2.0/CREATEE FORM.png" alt="">
+                <H2 class="text-success">CRUD CONTROLLER</H2> <br><br>
+                <h4 class="text-primary">CREATE STUDENTS</h4>
+                <img src="dota3/new-student-controller.png" alt="">
+                <h4 class="text-primary">READ STUDENTS</h4>
+                <img src="dota3/show-student-controller.png.png" alt="">
+                <h4 class="text-primary">UPDATE STUDENTS</h4>
+                <img src="dota3/edit-student-controller.png" alt="">
+                <h4 class="text-primary">DELETE STUDENTS</h4>
+                <img src="dota3/delete-student-controller.png" alt="">
             </div>
         </div>
-    </div>
-    <hr> <br><br><br>
-    <div class="container">
         <div class="row">
             <div class="col">
-                <h2 class="text-warning">READ SYSTEEM</h2>
-                <img src="dota2.0/READ.png">
-                <br><br><br><br><br><br>
+                <h2 class="text-success">TWIG FILES</h2>
+                <h4 class="text-primary">HOMEPAGE STUDENT TWIG</h4>
+                <img src="dota3/homepage-student-twig.png" alt="">
+                <h4 class="text-primary">EDIT AND NEW STUDENT TWIG</h4>
+                <img src="dota3/edit-student-twig.png" alt="">
+                <h4 class="text-primary">REGISTRATION FORM TWIG</h4>
+                <img src="dota3/register-form-twig.png" alt="">
             </div>
+        </div>
+        <div class="row">
             <div class="col">
-                <h2 class="text-warning">UPDATE SYSTEEM</h2>
-                <img src="dota2.0/UPDATE.png">
-                <h2 class="text-danger">UPDATE FORM</h2>
-                <img src="dota2.0/UPDATE_FORM.png">
+                <h1 class="text-danger">STUDENT ENTITY WATCH OUT FOR THIS ONE</h1>
+                <img src="dota3/student-entity-manytomany.png" alt="">
+                <h3 class="text-danger">THIS ONE RELATES TO THIS ONE!</h3>
+                <img src="dota3/homepage-student-twig.png" alt="">
             </div>
+        </div>
+        <div class="row">
             <div class="col">
-                <br><br><br><br><br><br>
-                <h2 class="text-warning">DELETE SYSTEEM</h2>
-                <img src="dota2.0/DELETE.png">
+                <h2 class="text-success">DATABASE ROLES</h2>
+                <h4 class="text-primary">DATABASE ROLES</h4>
+                <img src="dota3/user-roles-database.png" alt="">
             </div>
+        </div>
+        <div class="row">
             <div class="col">
-                <br><br><br><br><br><br>
-                <h2 class="text-warning">HOMEPAGE RECIPE</h2>
-                <img src="dota2.0/RECIPE_HOMEPAGE.png">
-                <br><br><br><br><br><br>
-                <h2 class="text-danger">RECIPE FORM</h2>
-                <img src="dota2.0/RECIPE_FORM.png">
+                <h2 class="text-success">STUDENT FORM</h2>
+                <img src="dota3/student-form.png" alt="">
             </div>
         </div>
     </div>
     <br><br><br>
-    <div class="container linux-toets">
-        <div class="row">
-            <div class="col">
-                <h2 class="text-secondary">LINUX TOETS</h2>
-
-
-                <p class="text-primary"> 1. Ga naar de map /srv/www/vhosts en maak de volgende 3 mappen in vhosts. <br>
-                    De mappen krijgen de volgende titels. <br>
-                    locatierocmondriaan.nl <br>
-                    opleidingrocmondriaan.nl <br>
-                    opendagrocmondriaan.nl <br>
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. <br> cd /svr/www/vhosts</p>
-                <p class="text-danger">2. <br> mkdir locatierocmondriaan.nl</p>
-                <p class="text-danger">3. <br> mkdir opleidingrocmondriaan.nl</p>
-                <p class="text-danger">4. <br> mkdir opendagrocmondriaan.nl</p> <br>
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">2. Plaats in de <i>locatierocmondriaan.nl</i> een werkende <i>index.html</i> waaruit blijkt dat dit de website <br>
-                is van de <b>locatie</b>. Plaats vervolgens in de map <i>opleidingrocmondriaan.nl</i> een bestand <i>index.html</i> <br>
-                waaruit blijkt dat dit de site is van de <b>opleiding</b>.<br>
-                En plaats vervolgens in de map <i>opendagrocmondriaan.nl</i> een bestand <i>index.html</i> waaruit blijkt dat dit de site is van de <b>opendag</b>
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. <br> cd locatierocmondriaan.nl</p>
-                <p class="text-danger">2. <br> touch idex.html</p>
-                <p class="text-danger">3. <br> vi index.html</p>
-                <p class="text-danger">TIP. i = {TEXT TE EDITEN IN INDEX.HTML}</p>
-                <p class="text-danger">4. <br> :x {SLAAT DIE vi OP EN GAAT UIT INDEX.HTML VOOR JOU}</p>\
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">3. Ga naar de map <i>/etc/apache2/vhosts.d</i> en bekijk met <b>CAT</b> het voorbeeldbestand <i>vhosts.template</i>.<br>
-                Lees dit door!
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. DOWNLOAD APACHE <br> "zypper install apache2"</p>
-                <p class="text-danger">2. <br> cd /etc/apache2/vhosts.d</p>
-                <p class="text-danger">3. <br> cat vhosts.template</p>
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">4. Maak 3 kopieen van dit bestand (<i>vhosts.template</i>), een met de naam <b>locatie.conf</b>, een met de <br>
-                    naam <b>opleiding.conf</b> en een met de naam <b>opendag.conf</b>
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. <br> cp vhosts.template locatie.conf</p>
-                <p class="text-danger">2. <br> cp vhosts.template opleiding.conf</p>
-                <p class="text-danger">3. <br> cp vhosts.template opendag.conf</p>
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">5. Open om beurten deze bestanden met Vi en vervang overal waar het voorbeeldbestand <br>
-                <i>dummyhost-host.example.com</i> staat voor <b>locatierocmondriaan/nl</b>, <br>
-                <b>opleidingrocmondriaan.nl<b> en </b>opleidingrocmondriaan.nl</b>
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. vi locatie.conf en opleiding.conf en opendag.conf</p>
-                <p class="text-danger">2. Vervang {{dummy-host.example.com}} door {{locatierocmondriaan.test}} in locatie.conf</p>
-                <p class="text-danger">3. Vervang {{dummy-host.example.com}} door{{opleidingrocmondriaan.test}} in opleiding.conf</p>
-                <p class="text-danger">4. Vervang {{dummy-host.example.com}} door{{opendagrocmondriaan.test}} in opendag.conf</p>
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-                  
-                <p class="text-primary">6. Controleer in deze 3 bestanden of vooraan in het bestand de regel <b><Virtualhost * :80></b> <br>
-                    opgenomen is; indien niet, typ dit dan als eerste regel.
-                </p>
-                <img src="/dota2.0/linux-6.png">
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">7. Open met Vi het bestand <i>/etc/apache2/listen.conf</i> en verwijder het teken <b>#</b> voor de regel <br>
-                    <b>NameVirtualHost *:80</b> (of typ deze regel in het bestand wanneer deze regel niet aanwezig <br> is)
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. cd /etc</p>
-                <p class="text-danger">2. cd apache2</p>
-                <p class="text-danger">3. Vi listen.conf</p>
-                <img src="/dota2.0/linux-7.png">
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">8. Open in OpenSuSe met <b>vi</b> het bestand <i>/etc/hosts</i>.</p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <p class="text-danger">1. cd /etc</p>
-                <p class="text-danger">2. vi hosts</p>
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-                <p class="text-primary">9. Maak 2 nieuwe regels, onder de regel <b>127.0.0.1 localhost</b> <br>
-                <b>IP-adres locatierocmondriaan.nl <br>
-                    IP-adres opleidingrocmondriaan.nl <br>
-                    IP-adres opendagrocmondriaan.nl
-                </b>
-                </p>
-
-                <h4 class="text-success">ANTWOORD</h4>
-                <img src="/dota2.0/linux-8.png">
-            </div>
-        </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
