--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <a href="aboutme.html">About me</a> <br>
         <a href="project.html">Projects</a> <br>
         <a href="contact.html">Contact me</a> <br>
+        <a href="aboutus.html">About us</a> <br>
       </div>
     </div>
   </div>
